Refactor console banners and UpdateChecker
Introduce BORDER_* constants and replace repeated ASCII banner lines in PolarSouls and UpdateChecker to reduce duplication. Improve logging by using parameterized Logger.log calls for version/mode and update messages. Harden UpdateChecker: use URI.create(...).toURL(), switch to try-with-resources for the BufferedReader, import and catch IOException (instead of generic Exception), remove explicit reader.close(), and simplify numeric parsing by using a "\D" regex. Minor formatting and cleanup applied.